# MyServiceFunctions

./: CMakeLists.txt  Makefile  README.md
include/: AtlasUtils.h  serviceFunctions.h
libTesting/: CMakeLists.txt  libTesting.cxx
src/: AtlasUtils.cxx  serviceFunctions.cxx
test/: Makefile
testLib/: CMakeLists.txt
